// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeLine rtl render component should be rendered correctly in RTL direction 1`] = `
LoadedCheerio {
  "0": <ul
    class="dcloud-timeline dcloud-timeline-rtl"
  />,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`TimeLine rtl render component should be rendered correctly in RTL direction 2`] = `
LoadedCheerio {
  "0": <li
    class="dcloud-timeline-item"
  >
    <div
      class="dcloud-timeline-item-tail"
    />
    <div
      class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
    />
    <div
      class="dcloud-timeline-item-content"
    />
  </li>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
